Fixed issue with logout having lower z-index, resulting in loss of useability Changed where overall spacing applied around form for consistency Reduced form width to match design Buttons: added structure to buttons for styling Removed box shadow on nav links

--- a/src/sass/eqip.scss
+++ b/src/sass/eqip.scss
@@ -1,14 +1,21 @@
 @import 'eqip-colors';
 @import 'eqip-fonts';
 
-h1 {
-    /* Test for conversion to CSS */
-    color: #000;
+h1 {}
+h2 {
+	font-size:4rem;
+	margin-top:0;
+	margin-bottom:0.4em;
 }
 
 h3 {
 	font-size:2.3rem;
 }
+
+a:focus {
+	box-shadow:none;
+}
+
 .usa-header {
     font-family: $eapp-serif;
     background-color: $eapp-blue;
@@ -29,17 +36,16 @@ h3 {
             .eapp-logo-text {
                 font-size:3rem;
                 font-weight:$eapp-bold;
-                margin-top:4.4rem;
-            }
-            .eapp-logo-sf86 {
-                font-size:1.7rem;
+                margin-top:5.2rem;
             }
         }
 
+        /* logout control */
         .eapp-logout {
             position:absolute;
             right:0;
             top:2.2rem;
+            z-index:100;
             font-family:$eapp-sans;
             font-size:1.6rem;
             a {
@@ -80,11 +86,19 @@ h3 {
         left:0;
         height:100%;
         background:$eapp-green;
-        width:15%;
+        width:0;
     }
 }
 
 #main-content {}
+
+/* frame out the live form area for consistency */
+.eapp-core {
+	padding:5.5rem 0 2rem 6.5rem;
+	> * {
+		padding:0;
+	}
+}
 
 .hidden {
     display: none;
